# credit-risk-monitoring-pipeline

./: .dockerignore  .gitignore  Note.txt  README.md  explore_data.ipynb  ingest_data.ipynb  pyproject.toml
airflow/: airflow_variables.json.example
airflow/dags/: dbt_transform_mart.py  ingest_raw_data.py  load_to_warehouse.py  transform_data.py
dags/: ingest_raw_data.py
dashboard/: Dockerfile  app.py  requirements.txt
dashboard/.streamlit/: config.toml
dbt/: dbt_project.yml  profiles.yml
dbt/macros/: generate_schema_name.sql
dbt/models/marts/: fct_loan_risk.sql  prd_loan_sample.sql  prd_risk_summary.sql  schema.yml
dbt/models/staging/: sources.yml  stg_loans.sql
dbt/seeds/: lien_status.csv  loan_purpose.csv  loan_type.csv
dbt_lookup/: occupancy_type.csv  state_mapping.csv
docker/: .dockerignore  .env.example  Dockerfile  docker-compose.yml
draw_architecture_diagram/: generate_architecture_diagram.py
terraform/: .terraform.lock.hcl  main.tf  terraform.tfvars.example
warehouse/postgres/: schema.sql
warehouse/snowflake/: schema.sql
